Configure module integration test suite